--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,65 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 150 0% 95%;
+    --foreground: 150 0% 0%;
+    --card: 150 0% 90%;
+    --card-foreground: 150 0% 10%;
+    --popover: 150 0% 95%;
+    --popover-foreground: 150 95% 0%;
+    --primary: 150 100% 88%;
+    --primary-foreground: 0 0% 0%;
+    --secondary: 150 10% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 112 10% 85%;
+    --muted-foreground: 150 0% 35%;
+    --accent: 112 10% 80%;
+    --accent-foreground: 150 0% 10%;
+    --destructive: 0 50% 30%;
+    --destructive-foreground: 150 0% 90%;
+    --border: 150 20% 50%;
+    --input: 150 20% 18%;
+    --ring: 150 100% 88%;
+    --radius: 0.5rem;
+  }
+  .dark {
+    --background: 150 10% 5%;
+    --foreground: 150 0% 90%;
+    --card: 150 0% 0%;
+    --card-foreground: 150 0% 90%;
+    --popover: 150 10% 5%;
+    --popover-foreground: 150 0% 90%;
+    --primary: 150 100% 88%;
+    --primary-foreground: 0 0% 0%;
+    --secondary: 150 10% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 112 10% 15%;
+    --muted-foreground: 150 0% 60%;
+    --accent: 112 10% 15%;
+    --accent-foreground: 150 0% 90%;
+    --destructive: 0 50% 30%;
+    --destructive-foreground: 150 0% 90%;
+    --border: 150 20% 18%;
+    --input: 150 20% 18%;
+    --ring: 150 100% 88%;
+    --radius: 0.5rem;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
